--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mindfocus",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "react": "^18",
